# FastApiAuth

./: .env  Dockerfile  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_02_07_1413-1d29386b96ae_create_base_table.py
app/: settings.py
app/auth/: api.py  exceptions.py  jwt.py  schemas.py  tasks.py  utils.py
app/db/: __init__.py  base.py  db_helper.py  models.py
